plugins {
    id 'java'
}

subprojects {
    apply plugin: 'java-library'

    group 'eu.scattering'

    sourceCompatibility = 21
    targetCompatibility = 21

    java {
        modularity.inferModulePath = true
    }

    repositories {
        mavenCentral()
    }
}
